# pydantic-changedetect

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: flake8-mypy.yml  lint.yml  release.yml  test.yml  tox-pytest.yml
pydantic_changedetect/: __init__.py  _compat.py  changedetect.py  utils.py
tests/: test_changedetect.py  test_utils.py
