[tool.poetry]
name = "pydantic-changedetect"
version = "0.1.0"
description = "Extend pydantic models to also detect and record changes made to the model attributes."
authors = ["TEAM23 GmbH <info@team23.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
