[project]
name = "pydantic-changedetect"
version = "0.10.1"
description = "Extend pydantic models to also detect and record changes made to the model attributes."
authors = [{ name = "TEAM23 GmbH", email = "info@team23.de" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Repository = "https://github.com/team23/pydantic-changedetect"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8",
    "tox>=4.30.3,<5.0",
    "ruff>=0.13.3,<0.14.0",
    "pyright>=1.1.406,<1.2",
]

[tool.ruff]
line-length = 115
target-version = "py310"
output-format = "grouped"

[tool.ruff.lint]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
ignore = ["A001","A002","A003","ANN401","C901","N8","B008","F405","F821","UP035","UP006","PT030"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pydantic_changedetect"
module-root = ""
